// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalloutParagraph renders 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  roundedCorners={false}
  spacing="default"
  textAlign="left"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders an icon 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  margin="0.75rem"
  roundedCorners={false}
  spacing="default"
  textAlign="left"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <DecorativeIcon />
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders with compact 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  roundedCorners={false}
  spacing="compact"
  textAlign="left"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders with intermediate 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  roundedCorners={false}
  spacing="intermediate"
  textAlign="left"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders with narrow 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  roundedCorners={false}
  spacing="narrow"
  textAlign="left"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph specifies text align 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  roundedCorners={false}
  spacing="default"
  textAlign="center"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;
